added updated changes to HW

--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 <body id = "bkgrd" id = "elements">
 
 <h1>Totally Trival Trivia</h1>
-<div id = sub-wrapper></div>
-<h2 id = start> Start </h2>
+<div id = "sub-wrapper"></div>
+<h2 id ="start"> Start </h2>
 
-<div id = counter-number></div>
+<div id = "counter-number"></div>
 <div id='quiz-area'>
-    <form id=quiz-form>
-    </form>
+    
 </div>
 
 </body>
